--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         <div class="header-contacts">
             <div class="container-header-contacts">
                 <ul class="contacts-list">
-                    <li class="menu-list">CONTACT SALES</li>
-                    <li class="menu-list">TEL 646-791-3726</li>
-                    <li class="menu-list">US <img src="img/Frame.png" alt="открыть"></li>
+                    <li class="menu-list"><a class="contact-link" href="#">CONTACT SALES</a></li>
+                    <li class="menu-list"><a class="contact-link" href="#">TEL 646-791-3726</a></li>
+                    <li class="menu-list"><a class="contact-link" href="#">US <img src="img/Frame.png" alt="открыть"></a></li>
                 </ul>
             </div>
         </div>
@@ -43,10 +43,10 @@
             <div class="menu-item">
                 <ul class="point__list">
                         <li class="point__item">
-                            <img class="point1" src="img/deliverypoint.png" alt="Точка на карте">
+                            <button class="point1"><img src="img/deliverypoint.png" alt=""> </button>
                         <li class="mainmenu__item2"><a class="menu__link" href="#">SHOWROOMS</a></li>
                         <li class="basket__item">
-                            <img class="point1" src="img/corzina.png" alt="Корзина">
+                            <button class="point1"><img src="img/corzina.png" alt="корзина"></button>
                         </li>
                     </ul>
             </div>
@@ -54,8 +54,8 @@
 
         <hr>
     </header>
-
-    <section class="banner">
+<!-- 
+    <section class="banner"
         <div class="banner-div">
             <img class="imgbannera" src="img/1.png" alt="баннер">
         </div>
@@ -250,6 +250,6 @@
         </div>
 
         <a href="#" class="return-top">RETURN TO THE TOP</a>
-    </footer>
+    </footer> -->
 </body>
 </html>
